--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: > # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://yourdomain.com" # the base hostname & protocol for your site
 github_username:  michaellin
-facebook_username: michael.linyang
+twitter_username: michaelv03
 
 # Build settings
 markdown: kramdown
